--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	</head>
 	<body style="background-color:yellow;"> 
 		<h1>Mis trabajos de HTML</h1>
-		<h1><a href="ejemplo.html">Práctica 1</a></h1>
+		<h1><a href="">Práctica 1</a></h1>
+		<h1><a href="">Práctica 2</a></h1>
+		<h1><a href="">Práctica 3</a></h1>
 	</body>
 
 </html>
