--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>Mis trabajos de HTML</h1>
 		<h1><a href="Practica1.html">Práctica 1</a></h1>
 		<h1><a href="Errores.html">Práctica 2</a></h1>
-		<h1><a href="Berners-Lee-Wikipedia.html">Práctica 3</a></h1>
+		<h1><a href="BernersLee-Wikipedia.html">Práctica 3</a></h1>
 	</body>
 
 </html>
