--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<h1><a href="Practica1.html">Práctica 1</a></h1>
 		<h1><a href="Errores.html">Práctica 2</a></h1>
 		<h1><a href="Berners-Lee-Wikipedia.html">Práctica 3</a></h1>
+		<h1><a href="practica1">Práctica 4</a></h1>
+		
 	</body>
 
 </html>
