--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<h1><a href="Errores.html">Práctica 2</a></h1>
 		<h1><a href="Berners-Lee-Wikipedia.html">Práctica 3</a></h1>
 		<h1><a href="Ejercicio2.html">Práctica 4,Ejercicio1</a></h1>
+		<h1><a href="Ejercicio3.html">Práctica 4,Ejercicio2</a></h1>
 	
 		
 	</body>
